--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -2,7 +2,6 @@
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -12,7 +11,7 @@
   direction: ltr;
 
   /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased; */
   /* Support for Safari and Chrome. */
   text-rendering: optimizeLegibility;
 
